style : adding style to the div with title and setting the text-overflow to ellipsis to prevent from overflow and  overflowa s hidden.

--- a/src/notes/notes.css
+++ b/src/notes/notes.css
@@ -89,6 +89,11 @@
      font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Oxygen-Sans, Ubuntu, Cantarell, sans-serif;
      font-size: 0.85rem;
      font-weight: 600;
+     text-overflow: ellipsis;
+     overflow: hidden;
+     white-space: nowrap;
+     display: block;
+     min-width: 0px;
 }    
 
 .notes {
